--- a/Startup/my-app/package.json
+++ b/Startup/my-app/package.json
@@ -15,7 +15,10 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^20",
