--- a/Startup/my-app/package.json
+++ b/Startup/my-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
+    "express": "^4.21.0",
     "flowbite": "^2.5.1",
     "next": "14.2.7",
     "react": "^18",
