--- a/Startup/my-app/Dockerfile
+++ b/Startup/my-app/Dockerfile
@@ -2,8 +2,7 @@ FROM node:lts-alpine
 
 WORKDIR /app
 
-COPY package.json .
-
+COPY package.json ./
 RUN npm install
 
 COPY . .
@@ -11,5 +10,11 @@ COPY . .
 RUN npm run build
 
 EXPOSE 3000
+# Expose 4000 for server
+EXPOSE 4000
 
-CMD ["npm", "run", "dev"]
+COPY run.sh .
+
+RUN chmod +x run.sh
+
+CMD ["./run.sh"]
