--- a/Startup/my-app/package.json
+++ b/Startup/my-app/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.1.0",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/material": "^6.1.3",
     "express": "^4.21.0",
     "flowbite": "^2.5.1",
     "next": "^14.2.13",
