--- a/Startup/my-app/package.json
+++ b/Startup/my-app/package.json
@@ -14,7 +14,10 @@
     "@fontsource/roboto": "^5.1.0",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/base": "^5.0.0-beta.58",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.3",
+    "@mui/styled-engine-sc": "^6.1.3",
     "express": "^4.21.0",
     "flowbite": "^2.5.1",
     "next": "^14.2.13",
@@ -24,6 +27,7 @@
     "sharp": "^0.33.5",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
+    "styled-components": "^6.1.13",
     "timers-promises": "^1.0.1",
     "ws": "^8.18.0"
   },
