--- a/Startup/my-app/package.json
+++ b/Startup/my-app/package.json
@@ -30,6 +30,7 @@
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.13",
     "timers-promises": "^1.0.1",
+    "uuid": "^10.0.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
