--- a/Startup/my-app/Dockerfile
+++ b/Startup/my-app/Dockerfile
@@ -10,11 +10,5 @@ COPY . .
 RUN npm run build
 
 EXPOSE 3000
-# Expose 4000 for server
-EXPOSE 4000
 
-COPY run.sh .
-
-RUN chmod +x run.sh
-
-CMD ["./run.sh"]
+CMD ["node","server.js"]
