--- a/Startup/my-app/package.json
+++ b/Startup/my-app/package.json
@@ -16,8 +16,9 @@
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
     "@mui/base": "^5.0.0-beta.58",
+    "@mui/icons-material": "^6.1.4",
     "@mui/joy": "^5.0.0-beta.48",
-    "@mui/material": "^6.1.3",
+    "@mui/material": "^6.1.4",
     "@mui/styled-engine-sc": "^6.1.3",
     "express": "^4.21.0",
     "flowbite": "^2.5.1",
