--- a/Startup/my-app/package.json
+++ b/Startup/my-app/package.json
@@ -20,9 +20,11 @@
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.4",
     "@mui/styled-engine-sc": "^6.1.3",
+    "antd": "^5.21.4",
     "express": "^4.21.0",
     "flowbite": "^2.5.1",
     "next": "^14.2.13",
+    "primeicons": "^7.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-favicon": "^2.0.7",
