--- a/Startup/my-app/package.json
+++ b/Startup/my-app/package.json
@@ -34,7 +34,6 @@
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.13",
-    "tailwindcss": "^3.0.0",
     "timers-promises": "^1.0.1",
     "uuid": "^10.0.0",
     "ws": "^8.18.0"
@@ -43,10 +42,11 @@
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   }
 }
